+ Команды для взоимодействия. + Мелкие поправки.

--- a/GwentServer/pom.xml
+++ b/GwentServer/pom.xml
@@ -35,7 +35,6 @@
         <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
-            <scope>provided</scope>
             <version>1.1</version>
         </dependency>
         <dependency>
@@ -47,6 +46,11 @@
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
 
