--- a/GwintCodes/pom.xml
+++ b/GwintCodes/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>1.4.0</version>
+        </dependency>
 
     </dependencies>
     <build>
